--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.cheeseware.scriptableobjectarchitecture",
-  "version": "0.0.1",
+  "name": "com.github.cheesejedi.scriptableobjectarchitecture",
+  "version": "2.0.0",
   "displayName": "Scriptable Object Architecture",
   "description": "A fork of the ScriptableObject-Architecture GitHub repository, which was based on Ryan Hipple's Unite Austin 2017 talk.",
   "unity": "2019.1",
