--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.github.cheesejedi.scriptableobjectarchitecture",
   "version": "2.0.2",
-  "displayName": "Scriptable Object Architecture",
+  "displayName": "ScriptableObject-Architecture",
   "description": "A fork of the ScriptableObject-Architecture GitHub repository, which was based on Ryan Hipple's Unite Austin 2017 talk.",
   "unity": "2019.1",
  "keywords": [
