--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "com.github.cheesejedi.scriptableobject-architecture",
-  "version": "2.0.3",
+  "version": "2.0.5",
   "displayName": "ScriptableObject-Architecture",
-  "description": "A fork of the ScriptableObject-Architecture GitHub repository, which was based on Ryan Hipple's Unite Austin 2017 talk.",
+  "description": "A fork of the ScriptableObject-Architecture GitHub repository, which was based on Ryan Hipple's Unite Austin 2017 talk. Makes using Scriptable Objects as a fundamental part of your architecture in Unity super easy.",
   "unity": "2019.1",
+  "license": "MIT",
  "keywords": [
     "ScriptableObject",
     "Architecture",
